--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,12 @@
-
+@import "./components/basic-styles";
+@import "./utils/vars.scss";
+@import "./components/header-logo";
+@import "./components/navigation";
+@import "./components/header-contact";
+@import "./components/section-container";
+@import "./components/section-grid";
+@import "./components/header-title";
+@import "./components/main-button";
+@import "./components/lorem-ipsum-list";
+@import "./components/what-we-do-section";
+@import "./components/team-section";
