almost done: hw 7

--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -1,5 +1,5 @@
 .header-logo {
-  font-family: Raleway;
+  font-family: $fontFamilyLogo;
   font-style: bold;
   font-size: 26px;
   font-weight: 700;
