--- a/sass/utils/vars.scss
+++ b/sass/utils/vars.scss
@@ -5,3 +5,10 @@ $contactColor: #757575;
 $buttonColor: #ffffff;
 $bg-iconColor: #f5f4fa;
 $bg-labelColor: rgba(47, 48, 58, 0.8);
+$social-iconColor: #afb1b8;
+$bgColor: #2f303a;
+$bg-footerColor: rgba(0, 0, 0, 0.25);
+$modalColor: rgba(0, 0, 0, 0.2);
+
+$fontFamilyMain: "Roboto", sans-serif;
+$fontFamilyLogo: "Raleway", sans-serif;
