--- a/sass/components/_header-contact.scss
+++ b/sass/components/_header-contact.scss
@@ -15,6 +15,10 @@
       transition-duration: 250ms;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
+
+    &:hover svg {
+      fill: $accentColor;
+    }
   }
   &__envelope-icon {
     margin-right: 10px;
