--- a/sass/components/_basic-styles.scss
+++ b/sass/components/_basic-styles.scss
@@ -15,7 +15,7 @@ section {
   padding-bottom: 94px;
 }
 body {
-  font-family: $fontFamilyMain;
+  font-family: "Roboto", sans-serif;
 }
 
 .container__wrapper {
