--- a/sass/components/_header-contact.scss
+++ b/sass/components/_header-contact.scss
@@ -5,7 +5,7 @@
   margin-bottom: 32px;
 
   &__link {
-    font-size: 14px;
+    font-size: $fontSizeSmall;
     font-weight: 500;
     line-height: 16px;
     color: $contactColor;
