--- a/sass/components/_header-title.scss
+++ b/sass/components/_header-title.scss
@@ -1,5 +1,5 @@
 .header-title {
-  font-size: 44px;
+  font-size: $fontSizeHeader;
   font-weight: 900;
   line-height: 60px;
   text-align: center;
