--- a/sass/components/_main-button.scss
+++ b/sass/components/_main-button.scss
@@ -6,7 +6,7 @@
   padding-bottom: 200px;
 
   &__button {
-    font-size: 16px;
+    font-size: $fontSizeMedium;
     font-weight: 700;
     line-height: 30px;
     cursor: pointer;
