--- a/sass/utils/vars.scss
+++ b/sass/utils/vars.scss
@@ -9,6 +9,10 @@ $social-iconColor: #afb1b8;
 $bgColor: #2f303a;
 $bg-footerColor: rgba(0, 0, 0, 0.25);
 $modalColor: rgba(0, 0, 0, 0.2);
-
-$fontFamilyMain: "Roboto", sans-serif;
+$fontFamilyGlobal: "Roboto", sans-serif;
 $fontFamilyLogo: "Raleway", sans-serif;
+$fontSizeSmall: 14px;
+$fontSizeMedium: 16px;
+$fontSizeBig: 18px;
+$fontSizeHeader: 44px;
+$fontSizeTitle: 36px;
