--- a/sass/components/_lorem-ipsum-list.scss
+++ b/sass/components/_lorem-ipsum-list.scss
@@ -18,7 +18,7 @@
 
   &__header {
     color: $textColor;
-    font-size: 14px;
+    font-size: $fontSizeSmall;
     font-weight: 700;
     line-height: 16px;
     padding-bottom: 10px;
@@ -26,7 +26,7 @@
 
   &__text {
     color: $contactColor;
-    font-size: 14px;
+    font-size: $fontSizeSmall;
     font-weight: 400;
     line-height: 24px;
   }
