--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -63,7 +63,7 @@
   &__acceptance {
     display: flex;
     font-weight: 400;
-    font-size: 14px;
+    font-size: $fontSizeSmall;
     line-height: 24px;
     letter-spacing: 0.03em;
     color: #757575;
@@ -125,7 +125,7 @@
     border-radius: 4px;
     border: none;
     font-weight: 700;
-    font-size: 16px;
+    font-size: $fontSizeMedium;
     line-height: 30px;
     color: $buttonColor;
     letter-spacing: 0.06em;
