--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,25 +1,25 @@
 .navigation {
-  display: flex;
-  justify-content: space-between;
-  gap: 46px;
+  margin-right: 453px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 
-  &a {
-    font-size: 14px;
+  &__menu {
+    display: flex;
+    justify-content: space-between;
+    gap: 46px;
+  }
+
+  &__link {
+    color: $textColor;
+    font-size: $fontSizeSmall;
     font-weight: 500;
     line-height: 16px;
-    color: $textColor;
 
     &:hover {
       color: $accentColor;
       transition-duration: 250ms;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
-  }
-
-  &__menu {
-    margin-right: 453px;
-    margin-top: 32px;
-    margin-bottom: 32px;
   }
 
   &__item-underscore {
@@ -33,8 +33,20 @@
       display: block;
       width: 53px;
       height: 4px;
+      background-color: $accentColor;
       border-radius: 2px;
-      color: $accentColor;
+    }
+
+    &--current {
+      &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 58px;
+        height: 4px;
+        background-color: $accentColor;
+        border-radius: 2px;
+      }
     }
   }
 }
