--- a/sass/components/_our-clients-section.scss
+++ b/sass/components/_our-clients-section.scss
@@ -1,6 +1,6 @@
 .our-clients-section {
   color: $textColor;
-  font-size: 36px;
+  font-size: $fontSizeTitle;
   font-weight: 700;
   line-height: 42px;
   letter-spacing: 0.03em;
