--- a/sass/components/_portfolio-button.scss
+++ b/sass/components/_portfolio-button.scss
@@ -5,7 +5,7 @@
   padding-bottom: 34px;
 
   &__button {
-    font-size: 16px;
+    font-size: $fontSizeMedium;
     font-weight: 500;
     line-height: 26px;
     cursor: pointer;
