--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
-  margin-right: 453px;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  display: flex;
+  align-items: center;
+  margin-right: 94px;
 
   &__menu {
     display: flex;
