--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -6,6 +6,7 @@
   line-height: 31px;
   margin-top: 24px;
   margin-bottom: 25px;
+  margin-left: 15px;
   color: $primaryColor;
 
   &__hightlight {
