--- a/sass/components/_portfolio-product.scss
+++ b/sass/components/_portfolio-product.scss
@@ -8,6 +8,10 @@
   justify-content: space-between;
 
   &__border {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
     &:hover {
       border-bottom: 1px solid rgba(0, 0, 0, 0.25);
       border-radius: 4px;
