--- a/sass/main.css
+++ b/sass/main.css
@@ -104,6 +104,7 @@ div.portfolio-product__container:hover div.portfolio-product__overlay {
   line-height: 31px;
   margin-top: 24px;
   margin-bottom: 25px;
+  margin-left: 15px;
   color: #000000;
 }
 .header-logo__hightlight {
@@ -111,9 +112,9 @@ div.portfolio-product__container:hover div.portfolio-product__overlay {
 }
 
 .navigation {
-  margin-right: 453px;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  display: flex;
+  align-items: center;
+  margin-right: 94px;
 }
 .navigation__menu {
   display: flex;
@@ -173,57 +174,6 @@ div.portfolio-product__container:hover div.portfolio-product__overlay {
 .header-contact__smartphone-icon {
   margin-right: 10px;
   fill: #757575;
-}
-
-.section-container {
-  width: 1600px;
-  height: 600px;
-  max-width: 100%;
-  padding-top: 32px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/image-background.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  margin: 0 auto;
-}
-
-.section-grid {
-  padding-top: 200px;
-  padding-bottom: 280px;
-}
-
-.header-title {
-  font-size: 44px;
-  font-weight: 900;
-  line-height: 60px;
-  text-align: center;
-  letter-spacing: 0.06em;
-  width: 696px;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  color: #ffffff;
-}
-
-.main-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 30px;
-  padding-bottom: 200px;
-}
-.main-button__button {
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 30px;
-  cursor: pointer;
-  letter-spacing: 0.06em;
-  text-align: center;
-  min-width: 200px;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 42px;
-  background-color: #2196f3;
-  color: #ffffff;
 }
 
 .lorem-ipsum-list {
@@ -782,4 +732,52 @@ div.portfolio-product__container:hover div.portfolio-product__overlay {
   padding-left: 24px;
   padding-right: 24px;
   letter-spacing: 0.03em;
+}
+
+.section-hero {
+  width: 1600px;
+  height: 600px;
+  max-width: 100%;
+  padding-top: 32px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/image-background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+}
+.section-hero__container {
+  padding-top: 200px;
+  padding-bottom: 280px;
+}
+.section-hero__title {
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 60px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  width: 696px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  color: #ffffff;
+}
+.section-hero__grid-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 200px;
+}
+.section-hero__button {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 30px;
+  cursor: pointer;
+  letter-spacing: 0.06em;
+  text-align: center;
+  min-width: 200px;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 42px;
+  background-color: #2196f3;
+  color: #ffffff;
 }/*# sourceMappingURL=main.css.map */
